k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"   # NLB simple
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
