k8s/service.yaml
# frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  selector:
    app: frontend
  type: LoadBalancer    # Público
  ports:
    - name: http
      port: 80
      targetPort: 80
